--- a/Static Pages/customer-service.html
+++ b/Static Pages/customer-service.html
@@ -1,5 +1,47 @@
-<div class="static-content-container fleft"><div class="grid"><div class="row"><div class="col-12"><h1>Customer Service</h1>             <!--<a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;"><img src="/_site2/images/neuton/liveperson.gif" alt="Live Chat" class="floatRight"></a> -->             <p>It's our goal at Neuton to earn your loyalty through exceptional products and customer service that is second to none. Whether it's before, during, or after the sale, you can rely on our dedicated service team every time you need us.</p></div></div>     <div class="row"><div class="col-6"><h3>Contact information</h3>             <p><strong>Phone:</strong> 1-800-798-2921</p> 			<p><strong>Fax:</strong> 1-802-951-8497<br /><strong>Toll Free Fax:</strong> 1-800-929-5012</p>             <!--<p><strong>Live Chat:</strong> <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;">Click here</a> to chat live with a Neuton Customer Service representative</p> -->             <p><strong>Email:</strong> <a href="/pages/content/contact">click here</a></p>                          <h4>Mailing Address:</h4>             <p>Neuton Power<br />                 800 Hinesburg Rd<br />                 South Burlington, Vermont 05403<br />                 USA</p>                  <h4>Factory Store:</h4>             <p>1 Main St<br />                 Vergennes, Vermont 05491<br />                 Toll-Free: 1-888-203-5416<br />                 <a href="/pages/content/factory-store">Directions</a></p>             <h4>International:</h4>             <em>(including Canada and U.S. Territories)</em>             <p>Monday-Friday 8:00am - 4:30pm Eastern Time<br />                 Phone: 1-802-870-1437<br />                 Fax: 1-802-877-1216<br />                 Email: specialmkts@neutonpower.com</p></div>         <div class="col-6"><h3>Hours of operation:</h3>                                       <h4>Call Center Hours:</h4>                           <h5>Sales</h5>     <p>Monday - Friday 8:30am - 7:00pm Eastern Time<br />
-                   Saturday 8:30am - 5:00pm Eastern Time<br />         Sunday 10:00am - 4:00pm Eastern Time</p>          <h5>Customer Support</h5>     <p>Monday - Friday 8:30am - 4:30pm Eastern Time<br />         Saturday &amp; Sunday Closed</p>          <h5>Technical Support</h5>     <p>Monday - Friday 8:30am - 6:00pm Eastern Time<br /> 		Saturday 8:30am - 5:00pm Eastern Time<br /> 		Sunday Closed</p>                         <!--<h4>Live Chat</h4>
+<div class="static-content-container fleft">
+  <div class="grid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Customer Service</h1>
+        <!--<a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;"><img src="/_site2/images/neuton/liveperson.gif" alt="Live Chat" class="floatRight"></a> -->
+        <p>It's our goal at Neuton to earn your loyalty through exceptional products and customer service that is second to none. Whether it's before, during, or after the sale, you can rely on our dedicated service team every time you need us.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <h3>Contact information</h3>
+        <p><strong>Phone:</strong> 1-800-798-2921</p>
+        <p><strong>Fax:</strong> 1-802-951-8497<br />
+          <strong>Toll Free Fax:</strong> 1-800-929-5012</p>
+        <!--<p><strong>Live Chat:</strong> <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;">Click here</a> to chat live with a Neuton Customer Service representative</p> -->
+        <p><strong>Email:</strong> <a href="/pages/content/contact">click here</a></p>
+        <h4>Mailing Address:</h4>
+        <p>Neuton Power<br />
+          800 Hinesburg Rd<br />
+          South Burlington, Vermont 05403<br />
+          USA</p>
+        
+        <h4>International:</h4>
+        <em>(including Canada and U.S. Territories)</em>
+        <p>Monday-Friday 8:00am - 4:30pm Eastern Time<br />
+          Phone: 1-802-870-1437<br />
+          Fax: 1-802-877-1216<br />
+          Email: specialmkts@neutonpower.com</p>
+      </div>
+      <div class="col-6">
+        <h3>Hours of operation:</h3>
+        <h4>Call Center Hours:</h4>
+        <h5>Sales</h5>
+        <p>Monday - Friday 8:00am - 8:00pm Eastern Time<br />
+          Saturday 8:30am - 5:00pm Eastern Time<br />
+          Sunday 10:00am - 4:00pm Eastern Time</p>
+        <h5>Customer Support</h5>
+        <p>Monday - Friday 8:30am - 4:30pm Eastern Time<br />
+          Saturday &amp; Sunday Closed</p>
+        <h5>Technical Support</h5>
+        <p>Monday - Saturday 8:30am - 5:00pm Eastern Time<br />
+           Sunday Closed</p>
+        <!--<h4>Live Chat</h4>
             <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;"><img src="/_site2/images/neuton/liveperson.gif" alt="Live Chat"></a>
             <h5>Sales</h5>
     <p>
@@ -18,4 +60,7 @@
     <p>
         Monday - Friday 8:30am - 5:00pm Eastern Time<br>
 		Saturday &amp; Sunday Closed
-    </p> --></div></div></div></div>
+    </p> --></div>
+    </div>
+  </div>
+</div>
