update links to open in new tab

--- a/Static Pages/owners-manuals.html
+++ b/Static Pages/owners-manuals.html
@@ -1,1 +1,130 @@
-<div class="static-content-container fleft"><div class="grid"><div class="row"><div class="col-12"><h1>Owner's Manuals</h1> <p>If your computer requires Adobe Reader&reg; to view these manuals, <a href="http://www.adobe.com/products/acrobat/readstep2.html" rel="nofollow" target="_blank">download it here</a>.</p> <h3>Safety &amp; Operating Instructions for Current Neuton Mowers and Accessories</h3> <h4>Neuton CE6 Manuals</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/94994b21b283ee05f8b8cdd3f810adc326995b8a/original" alt="" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/17f9a9c2d06c165d9e8235829378339ec91f0f6c/original">CE6.4 Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/bebb044bba80489c49cc6380c211f5b355b143bd/original">CE6.3 Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/652edd91e2f68d51042102fa4bfc6100976c4f0f/original">CE6.2 Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/73ed609a9401f422c4f521f1de914e4e1f243231/original">Charging your Neuton CE6</a></li> </ul></div></div> <h4>Neuton CE5 Manuals</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/d937ff0a625bf64bb297152db5a301c63c3418a9/original" alt="" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/4486fd95f2c1b65d17be9d3697d6d93045070a4c/original">CE5.4 Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/09c0df4d1d50fb5a4868c1b3e4a66c8b48e3c59c/original">CE5.3 Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/e1185ee4770364947e58b9217d9dc16af84f8b02/original">CE5.2 Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/575817e70e4eabdf7a84b0b8f6d7741dbf78fc4c/original">Charging your Neuton CE5</a></li> </ul></div></div> <h4>Attachments</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/839bfee0fedcdafda4f651ea572fbe69134370ee/original" alt="" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/b18b26d880c09d126d14256e2ff67233660b9c93/original">Neuton Trimmer/Edger (for CE5 and CE6)</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/3f892a2bc432c882e9e0c3fbfe5406443f3b2a43/original">Neuton Striper/Roller (for CE6)</a></li> </ul></div></div> <h4>Lithium Hand Tools</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/6352a33e69f1754fb3d2c512dfbeb4c8dcf8b65a/original" alt="" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/ed2864dc02d455cbe3ead86e5c8f815b811125ec/original">Lithium String Trimmer Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/7c8494fbebbd11e2829b15335c2fd4b2c96910e0/original">Lithium Hedge Trimmer Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/32bd4d9d510f5d95f27fd00c7b7dbfd85d594955/original">Lithium Blower Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/50e5590b13aeb81bcacffdc24eddeb685e007e35/original">Lithium Chainsaw Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/4dd10b34ccb734849d9ae1524218f2eebf40439b/original">Lithium Pole Saw Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/8adbc6158c6e2cc92c4c780065fa9cae99a3e0b5/original">Charging Instructions for Lithium Hands Tools</a></li> </ul></div></div> <h4>Corded Hand Tools</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/11269be6d1b8211ea3839e60f8845114a7d51d29/original" alt="" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/0393e12c158a658af6c579dde14b118df6878084/original">Corded String Trimmer Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/543c91dba032d87907f8e37988b782725e3aa27e/original">Corded Tiller Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/018b2c37d8b52998f4073e19222a39ef890c53b6/original">Corded 24-inch Hedge Trimmer Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/a39c1d7c21f223f3f290da8d1e3d24d8504255f1/original">Corded Pole Saw Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/e588991651c1c1e832c6aaf7d28aea4ded6fc94a/original">Corded Blower/Vacuum Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/91e9c90339a2f10313b61d58af55636106eb7698/original">Corded Chainsaw Manual</a></li> </ul></div></div> <h3>Safety &amp; Operating Instructions for Older Model Neuton Mowers and Accessories</h3> <h4>Mower Manuals</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/2e3b869e93f7bace80cca0c049734b1509ff9ea8/original" alt="EM 5.1 mower" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/a205aeab0383fd32962321f72e2f97dca2cd5ed1/original">EM 5.1 Manual</a></li> </ul></div></div> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/8b2fc87096d5eadd69db1f43c8a979c1eb84deb7/original" alt="EM 4.1 mower" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/8ef0162008b8ea066cc3e5d63f034ab4cac79efc/original">EM 4.1</a> (March 2004 - January 2006)</li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/b3f968802ed3a5936340b1134aafdafb3eead2bf/original">EM 4.1</a> (January 2003 - February 2004)</li> </ul></div></div> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/cc1d348af43e39b3cf331fab7bc8f19f080b98b9/original" alt="2001 Whisper Lite mower" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/68d7b73e4a5b035a8bf00227b0f3ab4c0809c936/original">2001 Whisper Lite</a> (Your machine operates with a two-step function handlebar to start your mower)</li> </ul></div></div> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/bb0b761ee074f66779ca7f637cda0276b039917f/original" alt="2000 Whisper Lite mower" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/b966be6dc643a4e7855368bc3b989ba7557ac00d/original">2000 Whisper Lite</a> (Your machine operates with a three-step function handlebar to start your mower)</li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/00a8eb7671442cc9b02551cc320742b72b4b2f51/original">1999 Whisper Lite</a> (Your machine operates with a blade engage lever on the right handlebar to start your mower)</li> </ul></div></div> <h4>Attachments</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/40a6786c92d538ef7eec25704876b5735f48e223/original" alt="EM 5.1 Trimmer Attachment" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/fbb908c63a05bdaa981378c4f5b1ed633e5b14bc/original">Trimmer Attachment</a> (for EM 5.1 models)</li> </ul></div></div> <h4>Garden Cart Instructions</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/f9aa436f80dbf2204a16ac00f776010b582c83d6/original" alt="Neuton Cart" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/8e0d06aef0328717523cd82bee3bc79623f74d87/original">Garden Cart Owner's Manual</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/6724128fbe8119ef879b809d76221deb7f801b23/original">Leaf Catcher Instructions</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/61d451ae55198a6007718e890b79b8dbceeb7bd1/original">Side Rail Instructions</a></li> </ul></div></div> <h4>Neuton NiCad Battery Hand Tools</h4> <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/76bef561ba87fbebfb1676c84cf11a3cc753ec3f/original" alt="NiCad hand tools" class="floatLeft" /> <div class="media-body"><ul>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/ddc98847bf85ad4087654380079a874acd0ecda0/original">Neuton NiCad Blower</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/0dbc6a071f05ad9e371ad3583158828f945b6372/original">Neuton NiCad Chainsaw</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/248f9b857bb72fc9b4a29b7ee077e2fe56ffd86d/original">Neuton NiCad Hedge Trimmer</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/2548b11a9ae2398c1d7897e820434ae3ac05b7a2/original">Neuton NiCad String Trimmer</a></li>     <li><a href="https://dam.generac.com/ImConvServlet/imconv/7b5a43f15849d060a417e4c9c86b705ce859d6b5/original">Neuton NiCad Pole Saw</a></li> </ul></div></div></div></div></div></div>
+<div class="static-content-container fleft">
+  <div class="grid">
+    <div class="row">
+      <div class="col-12">
+        <h1>Owner's Manuals</h1>
+        <p>If your computer requires Adobe Reader&reg; to view these manuals, <a href="http://www.adobe.com/products/acrobat/readstep2.html" rel="nofollow" target="_blank">download it here</a>.</p>
+        <h3>Safety &amp; Operating Instructions for Current Neuton Mowers and Accessories</h3>
+        <h4>Neuton CE6 Manuals</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/94994b21b283ee05f8b8cdd3f810adc326995b8a/original" alt="" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/17f9a9c2d06c165d9e8235829378339ec91f0f6c/original" target="_blank">CE6.4 Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/bebb044bba80489c49cc6380c211f5b355b143bd/original" target="_blank">CE6.3 Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/652edd91e2f68d51042102fa4bfc6100976c4f0f/original" target="_blank">CE6.2 Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/73ed609a9401f422c4f521f1de914e4e1f243231/original" target="_blank">Charging your Neuton CE6</a></li>
+            </ul>
+          </div>
+        </div>
+        <h4>Neuton CE5 Manuals</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/d937ff0a625bf64bb297152db5a301c63c3418a9/original" alt="" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/4486fd95f2c1b65d17be9d3697d6d93045070a4c/original" target="_blank">CE5.4 Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/09c0df4d1d50fb5a4868c1b3e4a66c8b48e3c59c/original" target="_blank">CE5.3 Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/e1185ee4770364947e58b9217d9dc16af84f8b02/original" target="_blank">CE5.2 Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/575817e70e4eabdf7a84b0b8f6d7741dbf78fc4c/original" target="_blank">Charging your Neuton CE5</a></li>
+            </ul>
+          </div>
+        </div>
+        <h4>Attachments</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/839bfee0fedcdafda4f651ea572fbe69134370ee/original" alt="" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/b18b26d880c09d126d14256e2ff67233660b9c93/original" target="_blank">Neuton Trimmer/Edger (for CE5 and CE6)</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/3f892a2bc432c882e9e0c3fbfe5406443f3b2a43/original" target="_blank">Neuton Striper/Roller (for CE6)</a></li>
+            </ul>
+          </div>
+        </div>
+        <h4>Lithium Hand Tools</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/6352a33e69f1754fb3d2c512dfbeb4c8dcf8b65a/original" alt="" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/ed2864dc02d455cbe3ead86e5c8f815b811125ec/original" target="_blank">Lithium String Trimmer Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/7c8494fbebbd11e2829b15335c2fd4b2c96910e0/original" target="_blank">Lithium Hedge Trimmer Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/32bd4d9d510f5d95f27fd00c7b7dbfd85d594955/original" target="_blank">Lithium Blower Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/50e5590b13aeb81bcacffdc24eddeb685e007e35/original" target="_blank">Lithium Chainsaw Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/4dd10b34ccb734849d9ae1524218f2eebf40439b/original" target="_blank">Lithium Pole Saw Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/8adbc6158c6e2cc92c4c780065fa9cae99a3e0b5/original" target="_blank">Charging Instructions for Lithium Hands Tools</a></li>
+            </ul>
+          </div>
+        </div>
+        <h4>Corded Hand Tools</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/11269be6d1b8211ea3839e60f8845114a7d51d29/original" alt="" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/0393e12c158a658af6c579dde14b118df6878084/original" target="_blank">Corded String Trimmer Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/543c91dba032d87907f8e37988b782725e3aa27e/original" target="_blank">Corded Tiller Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/018b2c37d8b52998f4073e19222a39ef890c53b6/original" target="_blank">Corded 24-inch Hedge Trimmer Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/a39c1d7c21f223f3f290da8d1e3d24d8504255f1/original" target="_blank">Corded Pole Saw Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/e588991651c1c1e832c6aaf7d28aea4ded6fc94a/original" target="_blank">Corded Blower/Vacuum Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/91e9c90339a2f10313b61d58af55636106eb7698/original" target="_blank">Corded Chainsaw Manual</a></li>
+            </ul>
+          </div>
+        </div>
+        <h3>Safety &amp; Operating Instructions for Older Model Neuton Mowers and Accessories</h3>
+        <h4>Mower Manuals</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/2e3b869e93f7bace80cca0c049734b1509ff9ea8/original" alt="EM 5.1 mower" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/a205aeab0383fd32962321f72e2f97dca2cd5ed1/original" target="_blank">EM 5.1 Manual</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/8b2fc87096d5eadd69db1f43c8a979c1eb84deb7/original" alt="EM 4.1 mower" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/8ef0162008b8ea066cc3e5d63f034ab4cac79efc/original" target="_blank">EM 4.1</a> (March 2004 - January 2006)</li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/b3f968802ed3a5936340b1134aafdafb3eead2bf/original" target="_blank">EM 4.1</a> (January 2003 - February 2004)</li>
+            </ul>
+          </div>
+        </div>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/cc1d348af43e39b3cf331fab7bc8f19f080b98b9/original" alt="2001 Whisper Lite mower" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/68d7b73e4a5b035a8bf00227b0f3ab4c0809c936/original" target="_blank">2001 Whisper Lite</a> (Your machine operates with a two-step function handlebar to start your mower)</li>
+            </ul>
+          </div>
+        </div>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/bb0b761ee074f66779ca7f637cda0276b039917f/original" alt="2000 Whisper Lite mower" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/b966be6dc643a4e7855368bc3b989ba7557ac00d/original" target="_blank">2000 Whisper Lite</a> (Your machine operates with a three-step function handlebar to start your mower)</li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/00a8eb7671442cc9b02551cc320742b72b4b2f51/original" target="_blank">1999 Whisper Lite</a> (Your machine operates with a blade engage lever on the right handlebar to start your mower)</li>
+            </ul>
+          </div>
+        </div>
+        <h4>Attachments</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/40a6786c92d538ef7eec25704876b5735f48e223/original" alt="EM 5.1 Trimmer Attachment" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/fbb908c63a05bdaa981378c4f5b1ed633e5b14bc/original" target="_blank">Trimmer Attachment</a> (for EM 5.1 models)</li>
+            </ul>
+          </div>
+        </div>
+        <h4>Garden Cart Instructions</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/f9aa436f80dbf2204a16ac00f776010b582c83d6/original" alt="Neuton Cart" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/8e0d06aef0328717523cd82bee3bc79623f74d87/original" target="_blank">Garden Cart Owner's Manual</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/6724128fbe8119ef879b809d76221deb7f801b23/original" target="_blank">Leaf Catcher Instructions</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/61d451ae55198a6007718e890b79b8dbceeb7bd1/original" target="_blank">Side Rail Instructions</a></li>
+            </ul>
+          </div>
+        </div>
+        <h4>Neuton NiCad Battery Hand Tools</h4>
+        <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/76bef561ba87fbebfb1676c84cf11a3cc753ec3f/original" alt="NiCad hand tools" class="floatLeft" />
+          <div class="media-body">
+            <ul>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/ddc98847bf85ad4087654380079a874acd0ecda0/original" target="_blank">Neuton NiCad Blower</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/0dbc6a071f05ad9e371ad3583158828f945b6372/original">Neuton NiCad Chainsaw</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/248f9b857bb72fc9b4a29b7ee077e2fe56ffd86d/original" target="_blank">Neuton NiCad Hedge Trimmer</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/2548b11a9ae2398c1d7897e820434ae3ac05b7a2/original" target="_blank">Neuton NiCad String Trimmer</a></li>
+              <li><a href="https://dam.generac.com/ImConvServlet/imconv/7b5a43f15849d060a417e4c9c86b705ce859d6b5/original" target="_blank">Neuton NiCad Pole Saw</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
