Hiding contact us link

--- a/Static Pages/customer-service.html
+++ b/Static Pages/customer-service.html
@@ -14,7 +14,7 @@
         <p><strong>Fax:</strong> 1-802-951-8497<br />
           <strong>Toll Free Fax:</strong> 1-800-929-5012</p>
         <!--<p><strong>Live Chat:</strong> <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;">Click here</a> to chat live with a Neuton Customer Service representative</p> -->
-        <p><strong>Email:</strong> <a href="/pages/content/contact">click here</a></p>
+      <!--  <p><strong>Email:</strong> <a href="/pages/content/contact">click here</a></p>-->
         <h4>Mailing Address:</h4>
         <p>Neuton Power<br />
           800 Hinesburg Rd<br />
