Add rel="noopener" to external links

--- a/Static Pages/battery-faq.html
+++ b/Static Pages/battery-faq.html
@@ -24,9 +24,9 @@
   <h3>How do I recycle my battery?</h3>
   <p>We do not accept old batteries for disposal. Please dispose of your used Batteries responsibly by recycling them in accordance with your local waste management regulations. Call your local Solid Waste Management District or your local waste handler to locate the collection site nearest you. Some collection sites recycle Batteries year-round; others collect them periodically.</p>
   <p>You may learn more about recycling the battery <a href="/pages/content/recycling-batteries">here</a>.</p>
-  <p>You can also visit the Web site of <a href="https://search.earth911.com/?utm_source=earth911-header&utm_medium=top-navigation-menu&utm_campaign=top-nav-recycle-search-button" rel="nofollow" target="_blank">Earth 911</a> for more information. </p>
-  <p>For a fee, you can recycle your Batteries with the <a href="http://www.inmetco.com/" rel="nofollow">International Metals Reclamation Company</a>.</p>
-  <p>To learn more about hazardous waste recycling, visit the Web site for <a href="http://www.batterycouncil.org/" rel="nofollow" target="_blank">Battery Council International</a> or the <a href="http://www.epa.gov/" rel="nofollow" target="_blank">Environmental Protection Agency</a>.</p>
+  <p>You can also visit the Web site of <a href="https://search.earth911.com/?utm_source=earth911-header&utm_medium=top-navigation-menu&utm_campaign=top-nav-recycle-search-button" rel="noopener" target="_blank">Earth 911</a> for more information. </p>
+  <p>For a fee, you can recycle your Batteries with the <a href="http://www.inmetco.com/" rel="noopener">International Metals Reclamation Company</a>.</p>
+  <p>To learn more about hazardous waste recycling, visit the Web site for <a href="http://www.batterycouncil.org/" rel="noopener" target="_blank">Battery Council International</a> or the <a href="http://www.epa.gov/" rel="noopener" target="_blank">Environmental Protection Agency</a>.</p>
   <h3>Do you offer a solar battery charger?</h3>
   <p>We do not offer any solar charging components at this time.</p>
   <h3>What is the battery warranty?</h3>
