--- a/Static Pages/recycling-batteries.html
+++ b/Static Pages/recycling-batteries.html
@@ -2,20 +2,20 @@
   <h1>Recycling Neuton Batteries</h1>
   <div class="media"><img src="https://dam.generac.com/ImConvServlet/imconv/92f9b813b183679c0833f3f7c8620d11d0579775/original" alt="" class="floatRight" />
     <div class="media-body">
-      <p>There are many different types of batteries, and most of them have federal and state regulations relating to their disposal. Most types of batteries contain heavy metals that, when thrown out in the trash, leak into landfills and cause serious environmental damage. When incinerated, as some waste is, they release toxic chemicals into the air that is very harmful to public health. Before disposing of your old Neuton batteries, learn about the pertinent disposal requirements. Learn about the laws that affect your state <a href="http://www.call2recycle.org" target="_blank" rel="nofollow">here</a>.</p>
-      <p>The older-model Neuton Cordless Yard Tools used rechargeable Ni-Cd (nickel-cadmium) batteries. Like lithium-ion batteries, their disposal is not regulated by federal agencies, but may be regulated by state agencies. Learn about the laws that affect your state <a href="http://www.call2recycle.org" target="_blank" rel="nofollow">here</a>.</p>
+      <p>There are many different types of batteries, and most of them have federal and state regulations relating to their disposal. Most types of batteries contain heavy metals that, when thrown out in the trash, leak into landfills and cause serious environmental damage. When incinerated, as some waste is, they release toxic chemicals into the air that is very harmful to public health. Before disposing of your old Neuton batteries, learn about the pertinent disposal requirements. Learn about the laws that affect your state <a href="http://www.call2recycle.org" target="_blank" rel="noopener">here</a>.</p>
+      <p>The older-model Neuton Cordless Yard Tools used rechargeable Ni-Cd (nickel-cadmium) batteries. Like lithium-ion batteries, their disposal is not regulated by federal agencies, but may be regulated by state agencies. Learn about the laws that affect your state <a href="http://www.call2recycle.org" target="_blank" rel="noopener">here</a>.</p>
       <h2>Find a Battery Recycling Location Near You</h2>
       <ul>
-        <li><a href="https://earth911.com/recycling-center-search-guides/?utm_source=earth911-header&utm_medium=top-navigation-menu&utm_campaign=top-nav-recycle-guide-button" target="_blank" rel="nofollow">Earth911.com</a></li>
-        <li><a href="https://www.call2recycle.org/locator/" target="_blank" rel="nofollow">Call2Recycle</a></li>
+        <li><a href="https://earth911.com/recycling-center-search-guides/?utm_source=earth911-header&utm_medium=top-navigation-menu&utm_campaign=top-nav-recycle-guide-button" target="_blank" rel="noopener">Earth911.com</a></li>
+        <li><a href="https://www.call2recycle.org/locator/" target="_blank" rel="noopener">Call2Recycle</a></li>
       </ul>
       <h2>More Information on Battery Recycling</h2>
       <ul>
-        <li><a href="http://www.epa.gov" target="_blank" rel="nofollow">Environmental Protection Agency</a></li>
-        <li><a href="https://earth911.com/recycling-center-search-guides/?utm_source=earth911-header&utm_medium=top-navigation-menu&utm_campaign=top-nav-recycle-guide-button" target="_blank" rel="nofollow">Earth911.com</a></li>
-        <li><a href="https://azr.com/" target="_blank" rel="nofollow">American Zinc Recycling</a></li>
+        <li><a href="http://www.epa.gov" target="_blank" rel="noopener">Environmental Protection Agency</a></li>
+        <li><a href="https://earth911.com/recycling-center-search-guides/?utm_source=earth911-header&utm_medium=top-navigation-menu&utm_campaign=top-nav-recycle-guide-button" target="_blank" rel="noopener">Earth911.com</a></li>
+        <li><a href="https://azr.com/" target="_blank" rel="noopener">American Zinc Recycling</a></li>
 
-        <li><a href="http://batterycouncil.org/" target="_blank" rel="nofollow">Battery Council International</a></li>
+        <li><a href="http://batterycouncil.org/" target="_blank" rel="noopener">Battery Council International</a></li>
       </ul>
     </div>
   </div>
