--- a/Static Pages/legal.html
+++ b/Static Pages/legal.html
@@ -19,7 +19,7 @@ ol {
 	<p>The linked sites, if any, are not under the control of DR Power Equipment and DR Power Equipment is not responsible for the content of any linked site or any link contained in a linked site. DR Power Equipment reserves the right to terminate any link or linking program at any time. DR Power Equipment does not endorse companies or products to which it links and reserves the right to note as such on its web pages. If you decide to access any of the third party sites linked to this Site, you do this entirely at your own risk. </p>
 	<h2>PRICING</h2>
 	<p>All prices on this site are in U.S. dollars and subject to change at any time. In the event of an incorrect price, we reserve the right to correct pricing errors at the time of sale. For VT deliveries and pick-ups, applicable state sales tax will be added. </p>
-	
+
 	<h2>DISCLAIMER </h2>
 	<p>We do not promise that the Materials will work on your computer and we are not responsible if they do not. </p>
 	<p>The Materials on this Site are provided "AS IS" and without express or implied warranties of any kind including warranties of merchantability, noninfringement of intellectual property or fitness for any particular purpose DR Power Equipment does not warrant that the information on our Site will be accurate, complete, uninterrupted or error-free, that defects will be corrected, or that this Site or the servers that make it available are free of viruses, worms, Trojan Horses or other harmful components. DR Power Equipment does not make any representations regarding the use of the Materials on this Site in terms of their correctness, accuracy, reliability, or otherwise. You (and not DR Power Equipment) assume the entire cost of all necessary servicing, repair or correction arising out of your use of the Materials on this Site. The Material that you read on this site is provided solely for entertainment and promotional purposes. In no event will DR Power Equipment be responsible or liable to any person or entity for any damage, loss, injury, liability or other cause of any kind (including without limitation damages for loss of profits, business interruption or loss of information) based upon or resulting from any use or inability to use the Materials provided on this Site. </p>
@@ -34,7 +34,11 @@ ol {
 	<li>advertises or solicits funds for goods or services. </li>
 	</ol>
 	<p>You agree to indemnify DR Power Equipment and its officers, directors, employees, agents and distributors from and against any and all third party claims, demands, liabilities, costs, or expenses, including reasonable attorney's fees, resulting from your breach of any of the foregoing agreements, representations, and warranties. </p>
-	
+
+<h2>IMPORTANT TAX INFORMATION</h2> <p>Due to a recent ruling by the US Supreme Court, effective July 1, 2018, businesses conducting internet sales and phone sales are now required to collect sales tax in states that have enacted such laws. Sales tax will be collected based on the state the product was delivered and will be remitted back to the same state.</p>  <p>States without such laws may require us to send you and the State notification of your purchases at year end, as well as remind you of the obligation to pay any sales tax due with your personal income tax return. Sales tax exemptions can only be requested by submission of a valid sales tax exemption certificate issued by your State tax department in advance to:</p>  <p>Neuton Power Equipment<br />    800 Hiensuburg Road<br />    South Burlington, VT 05403</p>
+
 	<h2>IN CONCLUSION </h2>
 	<p>Unless otherwise specified, the Materials on this Site are presented solely for the purpose of entertainment and promoting products available in the United States. This Site is controlled and operated by DR Power Equipment from its offices within the State of Vermont, USA. DR Power Equipment makes no representation that Materials in this Site are appropriate or available for use in other locations. Those who choose to access this Site from other locations so do on their own initiative and are responsible for compliance with local laws, if and to the extent local laws are applicable. </p>
+
+
 </div>
